--- a/Phieukiemlop2.html
+++ b/Phieukiemlop2.html
@@ -497,7 +497,7 @@
             height: 250px;
             border: 2px solid #000;
             border-radius: 15px;
-            background-image: url('https://i.imgur.com/8QoN12p.png');
+            background-image: url('sodooto.png');
             background-size: 90% 100%;
             background-repeat: no-repeat;
             background-position: center;
@@ -1322,39 +1322,39 @@
         
         <div class="bottom-icons-row" aria-label="Các loại hỗ trợ và phụ kiện">
             <div class="icon-item" aria-label="Hệ thống">
-                <img src="https://i.imgur.com/5J3t3Qj.png" alt="Hình minh họa hệ thống gồm các bộ phận xe chuyên dụng" />
+                <img src="hethong.png" alt="Hình minh họa hệ thống gồm các bộ phận xe chuyên dụng" />
                 HỆ THỐNG
             </div>
             <div class="icon-item" aria-label="Nâng cấp ánh sáng">
-                <img src="https://i.imgur.com/gK1qU9W.png" alt="Hình minh họa đèn pha xe ô tô cao cấp" />
+                <img src="anhsang.png" alt="Hình minh họa đèn pha xe ô tô cao cấp" />
                 NÂNG CẤP ÁNH SÁNG
             </div>
             <div class="icon-item" aria-label="Phụ kiện dã ngoại">
-                <img src="https://i.imgur.com/s65J5B5.png" alt="Hình minh họa phụ kiện đi dã ngoại" />
+                <img src="phukien.png" alt="Hình minh họa phụ kiện đi dã ngoại" />
                 PHỤ KIỆN DÃ NGOẠI
             </div>
             <div class="icon-item" aria-label="Nâng cấp mâm và lốp">
-                <img src="https://i.imgur.com/7bK7LgH.png" alt="Hình minh họa vành bánh xe thể thao" />
+                <img src="lopxe.png" alt="Hình minh họa vành bánh xe thể thao" />
                 NÂNG CẤP MÂM & LỐP
             </div>
             <div class="icon-item" aria-label="Phụ kiện hiệu suất">
-                <img src="https://i.imgur.com/h5E7c7Q.png" alt="Hình minh họa phụ kiện nâng cao hiệu suất xe" />
+                <img src="hieuxuat.png" alt="Hình minh họa phụ kiện nâng cao hiệu suất xe" />
                 PHỤ KIỆN HIỆU SUẤT
             </div>
             <div class="icon-item" aria-label="Phụ kiện bảo vệ xe">
-                <img src="https://i.imgur.com/T0b471P.png" alt="Hình minh họa phụ kiện bảo vệ xe" />
+                <img src="baove.png" alt="Hình minh họa phụ kiện bảo vệ xe" />
                 PHỤ KIỆN BẢO VỆ XE
             </div>
             <div class="icon-item" aria-label="Phụ kiện cứu hộ">
-                <img src="https://i.imgur.com/6Xy19Qc.png" alt="Hình minh họa phụ kiện cứu hộ" />
+                <img src="cuuho.png" alt="Hình minh họa phụ kiện cứu hộ" />
                 PHỤ KIỆN CỨU HỘ
             </div>
             <div class="icon-item" aria-label="Đồ chơi nội thất">
-                <img src="https://i.imgur.com/v8tT1qX.png" alt="Hình minh họa đồ chơi nội thất xe" />
+                <img src="noithat.png" alt="Hình minh họa đồ chơi nội thất xe" />
                 ĐỒ CHƠI NỘI THẤT
             </div>
             <div class="icon-item" aria-label="Đồ chơi ngoại thất">
-                <img src="https://i.imgur.com/y1c4o8t.png" alt="Hình minh họa đồ chơi ngoại thất xe" />
+                <img src="ngoạithat.png" alt="Hình minh họa đồ chơi ngoại thất xe" />
                 ĐỒ CHƠI NGOẠI THẤT
             </div>
         </div>
