--- a/Phieukiemlop2.html
+++ b/Phieukiemlop2.html
@@ -1354,7 +1354,7 @@
                 ĐỒ CHƠI NỘI THẤT
             </div>
             <div class="icon-item" aria-label="Đồ chơi ngoại thất">
-                <img src="ngoạithat.png" alt="Hình minh họa đồ chơi ngoại thất xe" />
+                <img src="ngoaithat.png" alt="Hình minh họa đồ chơi ngoại thất xe" />
                 ĐỒ CHƠI NGOẠI THẤT
             </div>
         </div>
