--- a/Phieukiemlop2.html
+++ b/Phieukiemlop2.html
@@ -630,7 +630,7 @@
         .tire-status-icon {
             width: 28px;
             height: 28px;
-            background: url('https://i.imgur.com/kS9eYtY.png') no-repeat center;
+            background: url('hientranglop.png') no-repeat center;
             background-size: contain;
             filter: none;
             flex-shrink: 0;
