--- a/Phieukiemlop2.html
+++ b/Phieukiemlop2.html
@@ -1176,7 +1176,7 @@
         <button onclick="submitFormData()">Lưu & Gửi</button>
         <button onclick="window.print()">In phiếu</button>
         <button onclick="alert('Chức năng xuất PDF đang được phát triển.')">Xuất PDF</button>
-        <button onclick="alert('Chức năng này sẽ đưa bạn về trang chủ.')">Trang chủ</button>
+        <button onclick="window.location.href='https://longvt89.github.io/phieukiemtra'">Trang chủ</button>
     </div>
 
     <div class="container" aria-label="Phiếu kiểm tra lốp xe Phi Long">
