--- a/Phieukiemlop2.html
+++ b/Phieukiemlop2.html
@@ -1243,7 +1243,7 @@ body {
 <body>
     <div class="top-menu-buttons">
         <button onclick="clearFormData()">Xóa form</button>
-        <button onclick="submitFormData()">Lưu & Gửi</button>
+        <button onclick="submitFormData()">Gửi Thông Tin</button>
         <button onclick="window.print()">In phiếu</button>
         <button onclick="alert('Chức năng xuất PDF đang được phát triển.')">Xuất PDF</button>
         <button onclick="window.location.href='https://longvt89.github.io/phieukiemtra'">Trang chủ</button>
