--- a/Phieukiemlop2.html
+++ b/Phieukiemlop2.html
@@ -1379,7 +1379,7 @@ body {
                                 <label>Áp suất:</label>
                                 <input type="text" class="tire-data-input" aria-label="Nhập Áp suất" name="tire_pressure_1">
                             </div>
-							<div class="tire-input-item" ><label>Hãng lốp:</label><input type="text" class="tire-data-input" name="tire_brand_4"></div>
+							<div class="tire-input-item" ><label>Hãng lốp:</label><input type="text" class="tire-data-input" name="tire_brand_1"></div>
                         </div>
                         <div class="dot-input-group">
                             <label>DOT:</label>
@@ -1403,7 +1403,7 @@ body {
                                 <label>Áp suất:</label>
                                 <input type="text" class="tire-data-input" aria-label="Nhập Áp suất" name="tire_pressure_2">
                             </div>
-							<div class="tire-input-item" ><label>Hãng lốp:</label><input type="text" class="tire-data-input" name="tire_brand_4"></div>
+							<div class="tire-input-item" ><label>Hãng lốp:</label><input type="text" class="tire-data-input" name="tire_brand_2"></div>
                         </div>
                         <div class="dot-input-group">
                             <label>DOT:</label>
@@ -1444,7 +1444,7 @@ body {
                                 <label>Áp suất:</label>
                                 <input type="text" class="tire-data-input" aria-label="Nhập Áp suất" name="tire_pressure_3">
                             </div>
-							<div class="tire-input-item" ><label>Hãng lốp:</label><input type="text" class="tire-data-input" name="tire_brand_4"></div>
+							<div class="tire-input-item" ><label>Hãng lốp:</label><input type="text" class="tire-data-input" name="tire_brand_3"></div>
                         </div>
                         <div class="dot-input-group">
                             <label>DOT:</label>
@@ -1507,6 +1507,7 @@ body {
                                 <label>Áp suất:</label>
                                 <input type="text" class="tire-data-input" aria-label="Nhập Áp suất lốp dự phòng" name="spare_tire_pressure">
                             </div>
+							<div class="tire-input-item" ><label>Hãng lốp:</label><input type="text" class="tire-data-input" name="spare_tire_brand"></div>
                         </div>
                         <div class="dot-input-group">
                             <label>DOT:</label>
