--- a/phieunhandichvu.html
+++ b/phieunhandichvu.html
@@ -532,7 +532,7 @@
                     <strong>Ghi chú trạng thái:</strong> 
                     <strong>I</strong> - Inspection: Kiểm tra và xử lí theo tình trạng; 
                     <strong>A</strong> - Adjust: Vệ sinh hoặc căn chỉnh; 
-                    <strong>R</strong> - Replace: Thay thế.
+                    <strong>R</strong> - Replace: Thay thế.<br>
                 Bugi R: mỗi 40.000 km với loại thường và 100.000 km với loại điện cực hợp kim
                 </div>
 
@@ -785,4 +785,5 @@
     </script>
 </body>
 </html>
+
 
